# council-debates

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
src/council_debates/: __init__.py  __main__.py  cli.py  templates.py
src/council_debates/core/: __init__.py  config.py  models.py
src/council_debates/pipeline/: __init__.py  chairman.py  ranking.py  runner.py
src/council_debates/presentation/: __init__.py  markdown.py
src/council_debates/providers/: __init__.py  chat_completions.py
tests/: test_config.py  test_debate.py  test_output.py  test_ranking.py  test_templates.py
