[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "council-debates"
version = "0.1.0"
description = "Python package for role-based LLM debates over OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ssh-den" }]
keywords = ["llm", "debate", "openai", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.0.0",
  "build>=1.2.0",
  "mypy>=1.11.0",
  "pylint>=3.3.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "setuptools>=68",
  "twine>=5.1.0",
  "wheel>=0.45.0",
]

[project.scripts]
council-debates = "council_debates.cli:app"

[project.urls]
Homepage = "https://github.com/ssh-den/council-debates"
Repository = "https://github.com/ssh-den/council-debates"
Changelog = "https://github.com/ssh-den/council-debates/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/council-debates/"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.11"
ignore-paths = ["^\\.venv/"]
persistent = false

[tool.pylint.messages_control]
disable = [
  "broad-exception-caught",
  "duplicate-code",
  "import-outside-toplevel",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
